--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
-    "homeassistant": "^0.2.0"
+    "homeassistant": "^0.2.0",
+    "node-bom": "^0.2.4"
   },
   "devDependencies": {
     "eslint": "^7.7.0"
