--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.20.0",
     "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
-    "homeassistant": "^0.2.0",
-    "node-bom": "^0.2.4"
+    "homeassistant": "^0.2.0"
   },
   "devDependencies": {
     "eslint": "^7.7.0"
