:bug: !swl should now be working correctly and saving to db

--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
   },
   "devDependencies": {
     "eslint": "^7.7.0"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "src/*.json"
+    ]
   }
 }
